test/type_errors/cases/schedule_ternary_negative.ml
open Eta

let _old_schedule : (unit, int, unit) Schedule.t = Schedule.recurs 1
